# resolve-hub

./: .gitignore
backend/: Dockerfile-start-db  alembic.ini  docker-compose.yml  pyproject.toml
backend/api/: main.py  requirements.txt
backend/api/data/: database.py  models.py
backend/api/data/alembic-postgres/: env.py
backend/api/data/alembic-postgres/versions/: 064c1adaba40_create_issues_table.py  11272b1d1c8b_create_issue_labels_table.py  97a12e8d9524_create_issues_blockers_table.py  9c771ea32683_create_accounts_table.py  ade80b05915b_create_issues_relationships_table.py  d69dcabb2c0a_create_projects_table.py
backend/api/routers/: accounts.py  issue_blockers.py  issue_labels.py  issue_relationships.py  issues.py  projects.py
backend/docs/: issue-sift-erd_202404081725.mmd
backend/migrations/: 20240405200700.create_account.down.sql  20240405200700.create_account.up.sql  20240406122000.create_project.up.sql  20240406122200.create_issues.down.sql  20240406122200.create_issues.up.sql  20240406122700.create_issue_hierarchies.up.sql  20240406122700.create_issue_relationships.down.sql  20240406122700.create_issue_relationships.up.sql  20240406123500.create_issue_blockers.down.sql  20240406123500.create_issue_blockers.up.sql
